# SAP___flake8-tergeo

./: .flake8  pyproject.toml
.github/workflows/: main.yml
_flake8_tergeo/checks/: ast_func_def.py
docs/: checks.md  configuration.md
news/: +31aa5ee8.feature.md
tests/checks/: test_ast_func_def.py
tests/checks/test_ast_func_def/: ftp148.txt
