[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools~=83.0", "setuptools-scm~=10.0"]

[project]
authors = [
    {name = "Kai Harder", email = "kai.harder@sap.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Flake8",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "flake8>=7,<9",
    "typing-extensions~=4.4",
    "flake8-comprehensions==3.17.0",
    "flake8-bugbear==25.11.29",
    "flake8-builtins==3.1.0",
    "flake8-simplify==0.30.0",
    "flake8-pytest-style==2.2.0",
    "flake8-typing-imports==1.17.0",
    "packaging>=24",
    "dependency_groups~=1.3",
    "tomli~=2.2;python_version<'3.11'",
]
description = "flake8 plugin which keeps your code clean and tidy"
dynamic = ["version"]
keywords = [
    "flake8",
    "plugin",
    "quality",
    "linter",
]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]
name = "flake8-tergeo"
readme = "README.md"
requires-python = ">=3.10,<4"

[project.urls]
Changelog = "https://github.com/SAP/flake8-tergeo/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/SAP/flake8-tergeo/issues"

[project.entry-points."flake8.extension"]
FT = "_flake8_tergeo:Flake8TergeoPlugin"

[dependency-groups]
dev = [
    "pre-commit==4.6.0",
    "pylint==4.0.6",
    "black==26.5.1",
    "isort==8.0.1",
    "mypy==2.3.0",
    "flake8==7.3.0",
    "types-flake8==7.3.0.20260508",
    "types-flake8-simplify==0.30.0.20260408",
    "types-flake8-builtins==3.1.0.20260508",
    "types-flake8-bugbear==25.11.29.20260518",
    "types-flake8-typing-imports==1.17.0.20260408",
    "pylint-per-file-ignores==3.2.1",
    "yesqa==1.5.0",
    "astpretty==3.0.0",
    "pyupgrade==3.21.2",
    "toml-sort==0.24.4",
    "uv==0.11.29",
    "towncrier==25.8.0",
]
test = [
    "pytest==9.1.1",
    "pytest-mock==3.15.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "pytest-randomly==4.1.0",
    "pytest-datadir==1.8.0",
    "coverage==7.15.2",
    "diff-cover==10.3.0",
    "flake8-json==24.4.0",
    "dirty-equals==0.11",
    "pytest-fixture-classes==1.0.4",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pytest\\.fail",
]
fail_under = 90
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
concurrency = ["multiprocessing"]
include = [
    "_flake8_tergeo/*",
    "tests/*",
]
patch = ["subprocess"]

[tool.diff_cover]
exclude = [
    "*/tests/*",
]
fail_under = 90
include_untracked = true

[tool.isort]
add_imports = [
    "from __future__ import annotations",
]
profile = "black"

[tool.mypy]
disable_error_code = [
    "type-abstract",
]
enable_error_code = [
    "explicit-override",
    "possibly-undefined",
    "ignore-without-code",
    "deprecated",
    "redundant-self",
    "unused-awaitable",
    "truthy-iterable",
    "exhaustive-match",
]
pretty = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_concatenate = true
strict_equality_for_none = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
follow_untyped_imports = true
module = [
    "astpretty.*",
]

[tool.pylint.basic]
good-names = [
    "visit_Module",
    "visit_ClassDef",
    "visit_FunctionDef",
    "visit_AsyncFunctionDef",
]
no-docstring-rgx = "^_"
# with pylint 4.0 reassigned constants are also considered as variables leading to false positives
# therefore we allow capital letters here as well
variable-rgx = "([A-Z0-9_]+|[a-z0-9_]+)$"

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.master]
load-plugins = [
    "pylint_per_file_ignores",
    "pylint.extensions.bad_builtin",
    "pylint.extensions.check_elif",
    "pylint.extensions.code_style",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.confusing_elif",
    "pylint.extensions.dict_init_mutate",
    "pylint.extensions.docparams",
    "pylint.extensions.docstyle",
    "pylint.extensions.empty_comment",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
]
max-line-length = 100
py-version = "3.10"

[tool.pylint."messages control"]
disable = [
    "fixme",
    "locally-disabled",
    "suppressed-message",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-positional-arguments",
    "too-many-arguments",
    "too-many-locals",
    "too-many-lines",
    "too-many-boolean-expressions",
    "use-implicit-booleaness-not-comparison-to-zero",
    "use-implicit-booleaness-not-comparison-to-string",
    "global-statement",
    "consider-using-assignment-expr",
]
enable = [
    "all",
]
per-file-ignores = [
    "tests/**:missing-function-docstring,missing-class-docstring,redefined-outer-name,protected-access,unused-argument,import-private-name",
]

[tool.pylint.reports]
reports = false

[tool.pylint.similarities]
ignore-imports = true

[tool.pytest]
addopts = ["-p", "no:legacypath"]
filterwarnings = [
    "error",
]
strict = true

[tool.setuptools.package-data]
_flake8_tergeo = [
    "py.typed",
    "checks/ftp115_invisible_chars.txt",
]

[tool.setuptools.packages.find]
include = [
    "_flake8_tergeo*",
]

[tool.setuptools_scm]
version_file = ""
version_scheme = "calver-by-date"

[tool.tomlsort]
sort_first = [
    "build-system",
    "project",
    "project.urls",
    "project.entry-points.flake8.extension",
    "dependency-groups",
]
sort_table_keys = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[tool.towncrier]
directory = "news"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "removal"
name = "Removals"

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"

[[tool.towncrier.type]]
directory = "feature"
name = "Features"

[[tool.towncrier.type]]
directory = "change"
name = "Changes"

[[tool.towncrier.type]]
directory = "fix"
name = "Fixes"

[tool.uv]
default-groups = []
